--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,12 @@ body{
 
 
 footer{
-    background: linear-gradient(to left, #000000, #0000ff 25%, #0066ff 70%, #000000 100%);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
     text-align: center;
 }
 
-footer p{
-    font-size: 20px;
-    padding: 10px 10px 10px 0px ;
-}
+
 
 h1{
     font-size:48px;
@@ -27,7 +25,7 @@ h1{
 div{
     min-height: 100px;
     padding: 20px;
-    border:white solid 3px;
+    border:#ffffff solid 3px;
 }
 
 p{
@@ -37,15 +35,9 @@ p{
 }
 
 h2{
-    
     font-size:32px;
     text-shadow:2px 4px #808080;
 }
-
-
-
-
-
 
 
 
@@ -54,7 +46,7 @@ img{
     display:block;
     margin-left: auto;
     margin-right: auto;
-    border:white dashed 10px;
+    border:#ffffff dashed 10px;
 }
 
 
@@ -71,12 +63,11 @@ div.intro{
 }
 
 div.red{
-    
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 3px white solid;
-    border-left:10px white solid;
+    border-bottom: 3px #ffffff solid;
+    border-left:10px #ffffff solid;
     border-top:none;
     border-right: none;
 }
@@ -85,8 +76,8 @@ div.blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right:10px solid white;
-    border-bottom: 3px solid white;
+    border-right:10px solid #ffffff;
+    border-bottom: 3px solid #ffffff;
     border-left:none;
     border-top:none;
 }
@@ -96,8 +87,8 @@ div.yellow{
     background-color: #ffff00;
     text-align: right;
     margin-left:50px;
-    border-bottom: 3px solid white;
-    border-left:10px solid white;
+    border-bottom: 3px solid #ffffff;
+    border-left:10px solid #ffffff;
     border-right: none;
     border-top:none;
     color:#000000;
@@ -112,11 +103,14 @@ div.green{
     background-color: #008500;
     text-align:left;
     margin-right: 50px;
-    border-right:10px solid white;
-    border-bottom: 3px solid white;
+    border-right:10px solid #ffffff;
+    border-bottom: 3px solid #ffffff;
     border-left:none;
     border-top:none;
 }
 
-
+footer p{
+    font-size: 20px;
+    padding: 10px 10px 10px 0px ;
+}
 
